# 3d_viewer_v1.0

./: Makefile  README.md  doxygen_file
3D_Viewer/: CMakeLists.txt  main.cpp  myopenglwidget.cpp  myopenglwidget.h  untitled.pro  viewerwindow.cpp  viewerwindow.h  viewerwindow.ui
Backend/Headers/: affinity_transformations.h  parser.h
Backend/Sources/: affinity_transformations.c  parser.c
Backend/Tests/: tests.c
